--- a/css/styles.css
+++ b/css/styles.css
@@ -5,3 +5,11 @@ body {
 h1 {
     color: white;
 }
+
+.ball {
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    background-color: lightblue;
+    margin: auto;
+}
