--- a/css/styles.css
+++ b/css/styles.css
@@ -21,3 +21,18 @@ h1 {
     justify-content: center;
     align-items: center;
 }
+
+.ball2 {
+    display: flex;
+
+    height: 100px;
+    width: 100px;
+    border-radius: 50%;
+    background-color: rgb(189, 101, 155);
+    margin: auto;
+    font-size: 22px;
+    font-weight: bold;
+
+    justify-content: center;
+    align-items: center;
+}
